docs : 주석 수정/추가